--------------------------------------------------------------------------------
- Added the Necromancer (Fix for issue #26)
  - Abbreviation is NE which used to be Neutral
  - Neutral changed to NU
- Changed colors of Necromancer and Tyrant (Fix for issue #27)
  - Tyrant was dark grey and looked too close to neutral
- Added Help menu which displays a text-only version of the instructions

Version 2.0.1
--------------------------------------------------------------------------------
- Lines for Group Movement Plotter do not disappear when changing groups
  - They are not saved, but they will stay there until file is closed.
  - Instead of black, they are now the kingdom's color.
- Parser now picks up 710, 720, and 976 orders and marks areas explored.
  - I was too lazy to handle 715 and 725
  - Everything is marked as 'no pc', even if there is a PC there.
  - The last area should be marked as 'all clear', but I didn't do that yet either.

Version 2.0.0
--------------------------------------------------------------------------------
- Can now process results for Third Cycle games.
  Still alpha code (mostly untested)
  Artifact information not processed
  No special handling for new emissary times (is there anything to do?)
  Colors for new kingdoms might overlap existing kingdoms.
  Most other things *seem* to work OK, but I expect bugs.

Version 1.9.4
--------------------------------------------------------------------------------
- Updated the grid boxes to be hidden when not highlighted.
  That makes the region borders easier to see, even on the small map.
- Added bindingd to the groups and pop centers so that the location text at
  the bottom of the window would update. That binding had been on the grid boxes,
  but with them gone, there was no location information to display.
- Parser now picks up when a battle occurs. All it grabs is the location,
  the attacker, and the defender.